# Credit-Card-Scanner

./: numbers_classificatoin_model_train.py  settings.gradle.kts
CreditCardScanner/: build.gradle.kts
CreditCardScanner/src/main/: AndroidManifest.xml
CreditCardScanner/src/main/cpp/: CMakeLists.txt  native-lib.cpp
CreditCardScanner/src/main/res/layout/: activity_credit_card_scanner.xml  content_credit_card_scanner.xml  fragment_credit_card_scanner_content.xml  fragment_first.xml  fragment_second.xml
CreditCardScanner/src/main/res/navigation/: nav_graph.xml
CreditCardScanner/src/main/res/values/: strings.xml  styles.xml  themes.xml
CreditCardScanner/src/main/res/values-night/: themes.xml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
creditcardscanner/: build.gradle.kts
creditcardscanner/src/main/cpp/: native-lib.cpp
creditcardscanner/src/main/res/drawable/: camera_preview_overlay_border.xml
creditcardscanner/src/main/res/layout/: fragment_credit_card_scanner_content.xml  loading_dialog.xml
creditcardscanner/src/main/res/values-fa/: strings.xml
creditcardscanner/src/main/res/values-night/: themes.xml
dataset/credit_card_numbers/: CITATIONS.bib  README.md  __init__.py  checksums.tsv  credit_card_numbers_dataset_builder.py  credit_card_numbers_dataset_builder_test.py
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
opencv/sdk/: build.gradle
(+44 files in other folders)
